--- a/44.html
+++ b/44.html
@@ -313,8 +313,8 @@
                                 </div>
                             </td>
                             <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; padding: 7px; width: 67px; height: 26px; cursor:pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
-                            <td style="text-align: right !important;">
-                                <div class="d-flex">
+                            <td>
+                                <div class="d-flex" style="justify-content: flex-end;">
                                     <div class="dropdown">
                                         <img src="./img/dashboard/Frame 70.png" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 22px;" />
                                         <div class="dropdown-menu ddm-1 p-0">
@@ -362,8 +362,8 @@
                                 </div>
                             </td>
                             <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; padding: 7px; width: 67px; height: 26px; cursor:pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
-                            <td style="text-align: right !important;">
-                                <div class="d-flex">
+                            <td>
+                                <div class="d-flex" style="justify-content: flex-end;">
                                     <div class="dropdown">
                                         <img src="./img/dashboard/Frame 70.png" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 22px;" />
                                         <div class="dropdown-menu ddm-1 p-0">
@@ -411,8 +411,8 @@
                                 </div>
                             </td>
                             <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; padding: 7px; width: 67px; height: 26px; cursor:pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
-                            <td style="text-align: right !important;">
-                                <div class="d-flex">
+                            <td>
+                                <div class="d-flex" style="justify-content: flex-end;">
                                     <div class="dropdown">
                                         <img src="./img/dashboard/Frame 70.png" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 22px;" />
                                         <div class="dropdown-menu ddm-1 p-0">
@@ -460,8 +460,8 @@
                                 </div>
                             </td>
                             <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; color: white; padding: 7px; width: 67px; height: 26px; cursor: pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
-                            <td style="text-align: right !important;">
-                                <div class="d-flex">
+                            <td>
+                                <div class="d-flex" style="justify-content: flex-end;">
                                     <div class="dropdown position-relative">
                                         <img src="./img/dashboard/Frame 70.png" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 22px;" />
                                         <div class="dropdown-menu ddm-1 p-0">
