--- a/95.html
+++ b/95.html
@@ -230,7 +230,7 @@
                             <div class="col-md-6 p-0 set-height-363" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
                                 <div style="text-align: center;" class="my-auto w-100">
                                     <img src="./img/95/Group 1182.png" class="img-fluid" />
-                                    <img src="./img/95/Rectangle 64.png" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
+                                    <img src="./img/95/Rectangle 64.png" class="adj-img-95" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
                                     <img src="./img/95/Group 1180.png" class="img-fluid" style="margin-left: 3.552%;" />
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                             <div class="col-md-6 p-0 set-height-363" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
                                 <div style="text-align: center;" class="my-auto w-100">
                                     <img src="./img/95/Group 1182.png" class="img-fluid" />
-                                    <img src="./img/95/Rectangle 64.png" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
+                                    <img src="./img/95/Rectangle 64.png" class="adj-img-95" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
                                     <img src="./img/95/Group 1180.png" class="img-fluid" style="margin-left: 3.552%;" />
                                 </div>
                             </div>
@@ -284,7 +284,7 @@
                             <div class="col-md-6 p-0 set-height-363" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
                                 <div style="text-align: center;" class="my-auto w-100">
                                     <img src="./img/95/Group 1182.png" class="img-fluid" />
-                                    <img src="./img/95/Rectangle 64.png" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
+                                    <img src="./img/95/Rectangle 64.png" class="adj-img-95" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
                                     <img src="./img/95/Group 1180.png" class="img-fluid" style="margin-left: 3.552%;" />
                                 </div>
                             </div>
