--- a/44.html
+++ b/44.html
@@ -21,7 +21,9 @@
   </head>
   <body style="background: #F7F8FA;" style="overflow: scroll;" id="style-2">
         <nav class="navbar bg-white" style="padding-left: 3.056%; padding-right: 3.056%; padding-top: 14px; padding-bottom: 14px;">
-            <img src="./img/image001 1.png" width="99" height="37" />
+            <a href="./index.html">
+                <img src="./img/image001 1.png" width="99" height="37" />
+            </a>
             <div>
                 <div class="mt-1 mr-3 float-left dropdown">
                     <img src="img/French.png" class="dropdown-toggle" data-toggle="dropdown" style="width: 23px; height: 17.25px;" />
