--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             <li class="nav-item">
                                 <a href="" id="dashboard-link" data-toggle="tab" class="nav-link d-flex cat active">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Category.png" style="display: none;" class="white-image img-fluid" />
-                                        <img src="./img/Category.png" class="black-image img-fluid" />
+                                        <img src="./img/Category.png" style="display: none; height: 16px; width: auto;" class="white-image" />
+                                        <img src="./img/48/Category.png" class="black-image" style="height: 16px; width: auto;" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Dashboard
@@ -42,10 +42,10 @@
                             </li>
                             
                             <li class="nav-item">
-                                <a href="" id="permit-link" data-toggle="tab" class="nav-link d-flex cat">
+                                <a href="44.html" id="permit-link" class="nav-link d-flex cat">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Paper.png" class="black-image img-fluid" />
-                                        <img src="./img/Paper (1).png" style="display: none;" class="white-image img-fluid" />
+                                        <img src="./img/Paper.png" class="black-image" style="height: 16px; width: auto;" />
+                                        <img src="./img/Paper (1).png" style="display: none; height: 16px; width: auto;" class="white-image" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Permis de travail
@@ -56,8 +56,8 @@
                             <li class="nav-item">
                                 <a href="" id="observation-link" data-toggle="tab" class="nav-link d-flex cat">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Group 716.png" style="display: none;" class="white-image img-fluid" />
-                                        <img src="./img/Group 716.png" class="black-image img-fluid" />
+                                        <img src="./img/Group 716.png" style="display: none; height: 16px; width: auto;" class="white-image" />
+                                        <img src="./img/Group 716.png" class="black-image" style="height: 16px; width: auto;" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Observation
@@ -68,8 +68,8 @@
                             <li class="nav-item">
                                 <a href="" id="profile-link" data-toggle="tab" class="nav-link d-flex cat">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Profile (1).png" style="display: none;" class="white-image" />
-                                        <img src="./img/Profile.png" class="black-image img-fluid" />
+                                        <img src="./img/Profile (1).png" style="display: none; height: 16px; width: auto;" class="white-image" />
+                                        <img src="./img/Profile.png" class="black-image" style="height: 16px; width: auto;" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Profile
@@ -167,7 +167,7 @@
                                 <div style="width: 39.292%; margin-top: 29px !important; background-color: white; border-radius: 10px;" class="adjust-table">
                                     <nav class="navbar" style="padding:30px 21px;">
                                         <div class="fw-400 fs-16 my-auto" style="color: #200E32; min-width: 150px;">Permis de travail récents</div>
-                                        <div class="fs-13 fw-400" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
+                                        <a style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;"><div class="fs-13 fw-400" style="color: #200E32;">See more</div></a>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
                                         <div style="width: 100%; overflow: auto;">
